# vscode_hello_world_cpp

./: .gitignore  CMakeLists.txt  build.sh
include/: c_father.h  c_son.h
src/: c_father.cpp  c_son.cpp  main.cpp
